// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle ON_MAP_PRESSED action handles ON_MAP_PRESSED action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle ON_MAP_PRESSED action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CALLOUT action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": true,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CALLOUT action snapshot - handles TOGGLE_CALLOUT action with payload 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CALLOUT action snapshot handles TOGGLE_CALLOUT action without payload 1`] = `
Object {
  "calloutPressed": true,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CENTRE_MARKER action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": true,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CENTRE_MARKER action snapshot - handles TOGGLE_CENTRE_MARKER action with payload 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_CENTRE_MARKER action snapshot - handles TOGGLE_CENTRE_MARKER action without payload 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": true,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_LOADER action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": true,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_LOADER action snapshot - handles TOGGLE_LOADER action with payload 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_LOADER action snapshot handles TOGGLE_LOADER action without payload 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": true,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_SEARCH_BAR action handles TOGGLE_SEARCH_BAR action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": true,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle TOGGLE_SEARCH_BAR action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": true,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle UPDATE_LAST_SEARCH action handles UPDATE_LAST_SEARCH action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 111,
    "longitude": -50,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;

exports[`handle UPDATE_LAST_SEARCH action returns the same state on an unhandled action 1`] = `
Object {
  "calloutPressed": false,
  "displayCentreMarker": false,
  "displayLoader": false,
  "displaySearchBar": false,
  "gettingCurrentLocation": false,
  "highestRate": -1,
  "inputData": Object {},
  "lastSearchCoordinates": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "locationPermission": false,
  "locationPredictions": Array [],
  "lowestRate": 100,
  "nearbyParkingSpots": Array [],
  "parkingSpotIDSet": Set {},
  "region": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
  "resultTypes": Object {},
  "selectedAddress": Object {},
  "userCoord": Object {
    "latitude": 49.282,
    "latitudeDelta": 0.005,
    "longitude": -123.1171,
    "longitudeDelta": 0.0028110944527736134,
  },
}
`;
